ext-auth-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ext-auth-node
spec:
  hosts:
  - "*"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        prefix: /ext-auth
    rewrite:
      uri: "/"    
    route:
    - destination:
        port:
          number: 80
        host: ext-auth-node
