httpbin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        prefix: /httpbin/
    rewrite:
      uri: "/"    
    route:
    - destination:
        port:
          number: 80
        host: httpbin
